--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "sqlite3": "^4.1.0",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
     "vue-material-design-icons": "^4.1.0",
     "vue-router": "^3.1.3",
     "vue-sidebar-menu": "^4.2.2"
