--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-sweetalert2": "^2.1.1"
   },
   "devDependencies": {
+    "@mdi/js": "^4.4.95",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
